--- a/Assignment/Css/LAB/CSS Grid/style.css
+++ b/Assignment/Css/LAB/CSS Grid/style.css
@@ -1,74 +1,39 @@
-*{
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
+.main {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        gap: 15px;
+        margin: 50px;
+      }
+      .card {
+        box-shadow: 0 0 15px;
+        background-color: #fff;
+        border-radius: 8px;
+        overflow: hidden;
+        box-shadow: 0 0 10px rgba(103, 2, 2, 0.7);
+        transition: 0.4s;
+        padding: 25px;
+        text-align: center;
+      }
+      .card:hover {
+        transform: translateY(-8px);
+        box-shadow: 0 0 14px rgba(0, 0, 0, 0.9);
+      }
 
-body{
-  background-color: #fff;
-  margin: 0;
-  padding: 0;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
-h1{
-  text-align: center;
-  margin-bottom: 25px;
-  color: #140101;
-}
-.product-grid{
-  display: grid;
-  grid-template-columns:repeat(2,2px) ;
-  gap: 25px;
-  margin: 0 auto;
-  /* max-width: 1200px; */
-}
-.card{
-  background-color: #fff;
-  border-radius: 5px;
-}
+      img {
+        /* width: 100%; */
+        /* height: 150px; */
+        object-fit: contain;
+        margin-bottom: 10px;
+      }
 
+      h2 {
+        font-size: 26px;
+        font-weight: 800;
+      }
 
+      span {
+        font-size: 18px;
+        color: rgb(112, 27, 5);
+        font-weight: 800;
+      }
 
-
-
-/* 
-    
-
-    .card {
-      background-color: #fff;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      overflow: hidden;
-      transition: transform 0.3s, box-shadow 0.3s;
-      cursor: pointer;
-    }
-
-    .card:hover {
-      transform: translateY(-8px);
-      box-shadow: 0 10px 20px rgba(0,0,0,0.15);
-    }
-
-    .card img {
-      width: 100%;
-      height: 200px;
-      object-fit: cover;
-    }
-
-    .card-content {
-      padding: 15px;
-      text-align: center;
-    }
-
-    .card-title {
-      font-size: 18px;
-      margin-bottom: 10px;
-      color: #333;
-    }
-
-    .card-price {
-      font-size: 16px;
-      color: #007b5e;
-      font-weight: bold;
-    }
- */
