--- a/Task/Bootstrap/bookmyshow.css
+++ b/Task/Bootstrap/bookmyshow.css
@@ -37,8 +37,53 @@
       margin: 0 10px;
       font-size: 13px;
     }
-    
+     .swiper {
+      width: 100%;
+      height: 100%;
+    }
 
+    /* .swiper-slide {
+      text-align: start;
+      font-size: 18px;
+      background: #444;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    } */
+
+    @media (max-width: 760px) {
+      .swiper-button-next {
+        right: 20px;
+        transform: rotate(90deg);
+      }
+
+      .swiper-button-prev {
+        left: 20px;
+        transform: rotate(90deg);
+      }
+    }
+footer {
+      background-color: #1c1c1c;
+      color: #fff;
+      padding: 40px 20px;
+    }
+    footer a {
+      color: #bbb;
+      text-decoration: none;
+      margin-right: 15px;
+    }
+    footer a:hover {
+      color: #fff;
+    }
+    .footer-top {
+      border-bottom: 1px solid #444;
+      padding-bottom: 20px;
+      margin-bottom: 20px;
+    }
+    .footer-icons i {
+      font-size: 24px;
+      margin-right: 15px;
+    }
 
     
     
